# FEM-Cpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  FEMException.h  Fem.cpp  Fem.h  Fem2D.cpp  Fem2D.h  Geometry2D.cpp  Geometry2D.h  Input.cpp  Input.h  Matrix.cpp  Matrix.h  Mesher.cpp  Mesher.h  Post.cpp  Post.h  README.md  Slove.cpp  Slove.h  main.cpp  shape.cpp  shape.h
